[package]
name = "hypr-relay"
version = "0.3.0"
edition = "2024"
description = "Lightweight daemon for Hyprland that bridges system events to desktop notifications"
license = "MIT"
repository = "https://github.com/Vega-0b1/hypr-relay"

[dependencies]
serde_json = "1"
libc = "0.2"
notify-rust = "4.12.0"
